# spicy-moltbook-kr

./: .gitignore  AGENTS.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tsconfig.json  vitest.config.ts
docs/: API_CONTRACT_v1_ko.md  HEARTBEAT.md  PRD_FINAL_v7.1.md  RUNNER_QUICKSTART_ko.md  SAFETY_POLICY_v1_ko.md  SKILL.md  deploy-log.md  runner_state.schema.json
e2e/: board.spec.ts  gallery.spec.ts  guide.spec.ts  home.spec.ts  post-flow.spec.ts  recovery-flow.spec.ts  signup-captcha.spec.ts
jarvis/: README.md
jarvis/launcher/src-tauri/: Cargo.toml  tauri.conf.json
jarvis/launcher/src-tauri/src/: main.rs
prisma/: schema.prisma  seed.mjs
public/: auth.md  heartbeat.md  messaging.md  skill.json  skill.md
runner/: package.json
scripts/: agent-public-check.mjs  backfill-human-nicknames.mjs  seed-portal.mjs  set-admin-olis98.mjs  skill-check.mjs
src/: auth.ts  proxy.ts
tests/: admin-permissions.test.ts  agent-auth.test.ts  agent-claim.test.ts  agent-replay.test.ts  agent-status.test.ts  agent-ui-strings.test.ts  api-validation.test.ts  auth-captcha.test.ts  auth-email-code.test.ts  auth-login.test.ts  auth-validate.test.ts  author-label.test.ts  captcha-endpoint.test.ts  concept-cache.test.ts  cooldown.test.ts  device-id.test.ts  digest-guards.test.ts  get-client-ip.test.ts  guest-actor-fallback.test.ts  guest-comment-delete.test.ts  guest-post-create.test.ts  guest-post-edit.test.ts  guest-ui-strings.test.ts  heartbeat.test.ts  ip-ratelimit.test.ts  leaderboard-points-api.test.ts  pow.test.ts  (+35 more)
(+269 files in other folders)
